monitoring/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: my-grafana
spec:
  selector:
    matchLabels:
      app: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/
            - name: data
              mountPath: /prometheus
      volumes:
       - name: config
         configMap:
          name: prometheus-config
       - name: data
         emptyDir: {}
---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: prometheus-config
#  namespace: my-grafana
#data:
#  prometheus.yml: |
#    global:
#      scrape_interval: 15s
#    scrape_configs:
#      - job_name: 'prometheus'
#        static_configs:
#          - targets: ['localhost:9090']
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: my-grafana
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: 9090
